# bakermaker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: BaseUIScreen.h  ImguiMarkdownRender.h  STStringJson.h  WindowsResource.h  imfilebrowser.h  immarkdown.h  improgress.h  setup.h  ssh_helper.h  stbi_funcs.h  unzip_utils.h  utils.h
include/UI/: BaseUIScreen.h  ClientExtract.h  CreateAdminKey.h  CreateSSHKeys.h  DebugExport.h  InstallCommands.inc  LibsNotFound.h  RepoManage.h  ServerConnect.h  ServerInstall.h  ServerSetup.h  SyncToServer.h  UsedStorage.h  UserManage.h
resources/: Documentation.md  SSHAdminKeyGen.md  SSHKeyGen.md  commitall.sh  gituserinstall.sh  install.sh  resources.rc
resources/docs/: Documentation.md  Errors.md  SSHAdminKeyGen.md  ServerCreation.md  ServerInstallText.md  ServerSetup.md  Usage.md
src/: ImguiMarkdownRender.cpp  main.cpp  setup.cpp  utils.cpp
src/UI/: BaseUIScreen.cpp  ClientExtract.cpp  CreateAdminKey.cpp  CreateSSHKeys.cpp  DebugExport.cpp  LibsNotFound.cpp  RepoManage.cpp  ServerConnect.cpp  ServerInstall.cpp  ServerSetup.cpp  SyncToServer.cpp  UsedStorage.cpp  UserManage.cpp
src/libs/: STStringJson.cpp  WindowsResource.cpp  imfilebrowser.cpp  ssh_helper.cpp  stbi.cpp  unzip_utils.cpp
